# Heterogenous-Container

./: CMakeLists.txt  README.md  condition.h  heterogeneous_list.cpp  input.txt  testhglist.cpp
containers/: container.h  dllist.cpp  queue.cpp  stack.cpp
iterator/: elem.h  iterator.h
simple_containers/: simple_dllist.cpp  simple_queue.cpp  simple_stack.cpp
tests/: UnitTestFramework.h  heterogeneous_list_tests.h
